--- a/ETL with Python.ipynb
+++ b/ETL with Python.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "99889b2a",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "91322fdd",
    "metadata": {},
    "outputs": [],
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f693205",
+   "id": "37b7627c",
    "metadata": {},
    "source": [
     "### 1. Download file"
@@ -138,8 +138,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "7b5bae9b",
+   "execution_count": null,
+   "id": "e9420010",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d21ec94e",
+   "id": "22f9b8d4",
    "metadata": {},
    "source": [
     "### 2. Unzip file"
@@ -158,8 +158,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "cdec477f",
+   "execution_count": null,
+   "id": "bbefaaf2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cbe857ee",
+   "id": "7b1d7c37",
    "metadata": {},
    "source": [
     "### 3. Extraction"
@@ -178,8 +178,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "96d5dc25",
+   "execution_count": null,
+   "id": "d7ed519e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "179a5cd0",
+   "id": "22c67925",
    "metadata": {},
    "source": [
     "### 4. Combine all 3 dataframe"
@@ -198,8 +198,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "57b7118e",
+   "execution_count": null,
+   "id": "e43f84f7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6940c369",
+   "id": "444083dd",
    "metadata": {},
    "source": [
     "### 5. Transformation"
@@ -216,8 +216,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "a6dcb135",
+   "execution_count": null,
+   "id": "93491386",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "026199cc",
+   "id": "00e70dca",
    "metadata": {},
    "source": [
     "### 6. Load"
@@ -234,33 +234,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "44796485",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Database was created\n",
-      "Connect to DB successfully\n",
-      "Table was created\n",
-      "Inserting data into table...\n",
-      "50 rows were inserted\n",
-      "MySQL connection closed.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "load_data_to_mysql_db(transformed_df.head(50))"
+    "load_data_to_mysql_db(transformed_df)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ea41156",
+   "id": "bc4d09ba",
    "metadata": {},
    "outputs": [],
    "source": []
